--- a/AulaHTML/curriculo.html
+++ b/AulaHTML/curriculo.html
@@ -10,7 +10,7 @@
 <body>
     <div id="apresentacao">
         <h1>Walison Soares Brandão</h1>
-        <img src="AulasHTML/imgs/imagem_walison.jpg" alt="Foto de Walison Brandão" height="15%" width="15%">
+        <img src="imgs/imagem_walison.jpg" alt="Foto de Walison Brandão" height="15%" width="15%">
         <h4>(Desenvolvedor back-end)</h4>
     </div>
     <div id="sobre">
